--- a/index.html
+++ b/index.html
@@ -2,26 +2,19 @@
 <html>
 
   <head><!-- where all the meta data will go, like and files we need to include -->
-    <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
+    <title>My Little Rainbow</title>
+    <link rel="stylesheet" type="text/css" href="./main.css" />
   </head>
 
   <body><!-- the body element is where everything we will see on the page will go -->
-
+    <div id="red" class="rainbow-color"></div>
+    <div id="orange" class="rainbow-color"></div>
+    <div id="yellow" class="rainbow-color"></div>
+    <div id="green" class="rainbow-color"></div>
+    <div id="blue" class="rainbow-color"></div>
+    <div id="indigo" class="rainbow-color"></div>
+    <div id="violet" class="rainbow-color"></div>
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
   </body>
 
 </html>
